codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__concurrent_process_waits_active.snap
---
source: tui/src/chatwidget/tests/process_wait.rs
expression: concurrent
---
• Waiting on 2 processes (esc to interrupt) · 2 background terminals running · /ps to view · /stop …
  └ Timed · 12s left · cargo test · process p2 · wait w2
    Until exit · 2m 13s elapsed · cargo build · process p1 · wait w1


› Ask Codex to do anything

  GPT-5.6-Sol default · /tmp/project
