codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__exploring_step5_finish_sed_range.snap
---
source: tui/src/chatwidget/tests.rs
expression: active_blob(&chat)
---
• Ran ls -la
  └ (no output)
• Ran cat foo.txt
  └ hello from foo
• Ran sed -n 100,200p foo.txt
  └ chunk
